--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,6 +33,7 @@ jobs:
     <<: *defaults
     steps:
       - checkout
+      - run: apt-get install tar
       - attach_workspace:
           at: "/go"
       - restore_cache:
@@ -45,6 +46,7 @@ jobs:
     <<: *defaults
     steps:
       - checkout
+      - run: apt-get install tar
       - attach_workspace:
           at: "/go"
       - restore_cache:
@@ -59,6 +61,7 @@ jobs:
     <<: *defaults
     steps:
       - checkout
+      - run: apt-get install tar
       - attach_workspace:
           at: "/go"
       - restore_cache:
