--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,7 @@ jobs:
     <<: *defaults
     steps:
       - checkout
-      - run: apt-get install tar
+      - run: sudo apt-get install tar
       - attach_workspace:
           at: "/go"
       - restore_cache:
@@ -46,7 +46,7 @@ jobs:
     <<: *defaults
     steps:
       - checkout
-      - run: apt-get install tar
+      - run: sudo apt-get install tar
       - attach_workspace:
           at: "/go"
       - restore_cache:
@@ -61,7 +61,7 @@ jobs:
     <<: *defaults
     steps:
       - checkout
-      - run: apt-get install tar
+      - run: sudo apt-get install tar
       - attach_workspace:
           at: "/go"
       - restore_cache:
