--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,8 @@ jobs:
       - restore_cache:
           key: v1-go-deps-{{ arch }}-{{ checksum  "build/main.go" }}-{{ checksum "package.json" }}
       - run: go run ./build/*.go deps
+      - run: du -sh /go/pgk
+      - run: du -sh /go/src
       - persist_to_workspace:
           root: "/go"
           paths:
