--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,11 +2,11 @@ version: 2
 
 defaults: &defaults
   working_directory: /go/src/github.com/filecoin-project/go-filecoin
-  # machine: true
-  docker:
-    - image: circleci/golang:1.10
+  machine: true
+  # docker:
+  #   - image: circleci/golang:1.10
   environment:
-    GOPATH: /go
+    GOPATH: "~/go"
 
 jobs:
   fetch_deps:
@@ -22,8 +22,8 @@ jobs:
       - save_cache:
           key: v2-go-deps-{{ arch }}-{{ checksum  "build/main.go" }}-{{ checksum "package.json" }}
           paths:
-            - "/go/pkg"
-            - "/go/src"
+            - "~/go/pkg"
+            - "~/go/src"
 
   build:
     <<: *defaults
