fix working dir

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2
 
 defaults: &defaults
-  working_directory: /go/src/github.com/filecoin-project/go-filecoin
+  working_directory: ~/go/src/github.com/filecoin-project/go-filecoin
   machine: true
   # docker:
   #   - image: circleci/golang:1.10
