--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,7 +57,7 @@ jobs:
       - run:
           name: Test
           command: |
-            go run ./build/*.go test -v -covermode=atomic -coverprofile=coverage.txt &&
+            go run ./build/*.go test -v -race -covermode=atomic -coverprofile=coverage.txt &&
             bash <(curl -s https://codecov.io/bash)
       - run:
           name: Lint
