--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
+[submodule "vendor/github.com/filecoin-project/go-proofs"]
+	path = vendor/github.com/filecoin-project/go-proofs
+	url = git@github.com:filecoin-project/go-proofs.git
+	branch = master
 [submodule "github.com/bitcoin-core/secp256k1"]
 	path = crypto/internal/secp256k1/libsecp256k1
 	url = https://github.com/bitcoin-core/secp256k1.git
