--- a/package.json
+++ b/package.json
@@ -165,6 +165,11 @@
       "hash": "QmS4niovD1U6pRjUBXivr1zvvLBqiTKbERjFo994JU7oQS",
       "name": "go-libp2p-routing",
       "version": "2.4.9"
+    },
+    {
+      "hash": "QmekXSLDnB9iTHRsKsidP6oN89vGGGRN27JP6gz9PSNHzR",
+      "name": "go-log",
+      "version": "1.5.8"
     }
   ],
   "gxVersion": "0.12.1",
