--- a/package.json
+++ b/package.json
@@ -171,6 +171,12 @@
       "hash": "QmfXU2MhWoegxHoeMd3A2ytL2P6CY4FfqGWc23LTNWBwZt",
       "name": "go-multiaddr-dns",
       "version": "0.2.4"
+    },
+    {
+      "author": "stebalien",
+      "hash": "QmWAzSEoqZ6xU6pu8yL8e5WaMb7wtbfbhhN4p1DknUPtr3",
+      "name": "go-block-format",
+      "version": "0.1.11"
     }
   ],
   "gxVersion": "0.12.1",
