--- a/package.json
+++ b/package.json
@@ -177,6 +177,12 @@
       "hash": "QmWAzSEoqZ6xU6pu8yL8e5WaMb7wtbfbhhN4p1DknUPtr3",
       "name": "go-block-format",
       "version": "0.1.11"
+    },
+    {
+      "author": "whyrusleeping",
+      "hash": "QmbXRda5H2K3MSQyWWxTMtd8DWuguEBUCe6hpxfXVpFUGj",
+      "name": "go-multistream",
+      "version": "0.3.7"
     }
   ],
   "gxVersion": "0.12.1",
