--- a/package.json
+++ b/package.json
@@ -225,6 +225,12 @@
       "hash": "QmPvyPwuCgJ7pDmrKDxRtsScJgBaM5h4EpRL2qQJsmXf4n",
       "name": "go-libp2p-crypto",
       "version": "2.0.1"
+    },
+    {
+      "author": "whyrusleeping",
+      "hash": "QmQSbtGXCyNrj34LWL8EgXyNNYDZ8r3SwQcpW5pPxVhLnM",
+      "name": "go-libp2p-net",
+      "version": "3.0.8"
     }
   ],
   "gxVersion": "0.12.1",
