gx import go-libp2p-peer

--- a/package.json
+++ b/package.json
@@ -231,6 +231,12 @@
       "hash": "QmQSbtGXCyNrj34LWL8EgXyNNYDZ8r3SwQcpW5pPxVhLnM",
       "name": "go-libp2p-net",
       "version": "3.0.8"
+    },
+    {
+      "author": "whyrusleeping",
+      "hash": "QmQsErDt8Qgw1XrsXf2BpEzDgGWtB1YLsTAARBup5b6B9W",
+      "name": "go-libp2p-peer",
+      "version": "2.3.7"
     }
   ],
   "gxVersion": "0.12.1",
