--- a/package.json
+++ b/package.json
@@ -243,6 +243,11 @@
       "hash": "QmQvJiADDe7JR4m968MwXobTCCzUqQkP87aRHe29MEBGHV",
       "name": "go-logging",
       "version": "0.0.0"
+    },
+    {
+      "hash": "QmRREK2CAZ5Re2Bd9zZFG6FeYDppUWt5cMgsoUEp3ktgSr",
+      "name": "go-log",
+      "version": "1.5.5"
     }
   ],
   "gxVersion": "0.12.1",
