--- a/package.json
+++ b/package.json
@@ -260,6 +260,11 @@
       "hash": "QmSF8fPo3jgVBAy8fpdjjYqgG87dkJgUprRBHRd2tmfgpP",
       "name": "goprocess",
       "version": "1.0.0"
+    },
+    {
+      "hash": "QmSP88ryZkHSRn1fnngAaV2Vcn63WUJzAavnRM9CVdU1Ky",
+      "name": "go-ipfs-cmdkit",
+      "version": "1.1.3"
     }
   ],
   "gxVersion": "0.12.1",
