--- a/package.json
+++ b/package.json
@@ -265,6 +265,12 @@
       "hash": "QmSP88ryZkHSRn1fnngAaV2Vcn63WUJzAavnRM9CVdU1Ky",
       "name": "go-ipfs-cmdkit",
       "version": "1.1.3"
+    },
+    {
+      "author": "why",
+      "hash": "QmTfTKeBhTLjSjxXQsjkF2b1DfZmYEMnknGE2y2gX57C6v",
+      "name": "go-blockservice",
+      "version": "1.0.12"
     }
   ],
   "gxVersion": "0.12.1",
