--- a/package.json
+++ b/package.json
@@ -277,6 +277,12 @@
       "hash": "QmV6FjemM1K8oXjrvuq3wuVWWoU2TLDPmNnKrxHzY3v6Ai",
       "name": "go-multiaddr-net",
       "version": "1.6.3"
+    },
+    {
+      "author": "jbenet",
+      "hash": "QmVG5gxteQNEMhrS8prJSmU2C9rebtFuTd3SYZ5kE3YZ5k",
+      "name": "go-datastore",
+      "version": "3.0.0"
     }
   ],
   "gxVersion": "0.12.1",
