gx import go-multiaddr

--- a/package.json
+++ b/package.json
@@ -301,6 +301,12 @@
       "hash": "QmXTpwq2AkzQsPjKqFQDNY2bMdsAT53hUBETeyj8QRHTZU",
       "name": "sha256-simd",
       "version": "0.1.1"
+    },
+    {
+      "author": "multiformats",
+      "hash": "QmYmsdtJ3HsodkePE3eU3TsCaP2YvPZJ4LoXnNkDE5Tpt7",
+      "name": "go-multiaddr",
+      "version": "1.3.0"
     }
   ],
   "gxVersion": "0.12.1",
