--- a/package.json
+++ b/package.json
@@ -307,6 +307,12 @@
       "hash": "QmYmsdtJ3HsodkePE3eU3TsCaP2YvPZJ4LoXnNkDE5Tpt7",
       "name": "go-multiaddr",
       "version": "1.3.0"
+    },
+    {
+      "author": "whyrusleeping",
+      "hash": "QmYSM6PKnCe9YVPNMisfpoBmczzHkA7h5Wrnc36DtdJhGo",
+      "name": "go-libp2p-swarm",
+      "version": "3.0.9"
     }
   ],
   "gxVersion": "0.12.1",
