gx import go-libp2p-protocol

--- a/package.json
+++ b/package.json
@@ -313,6 +313,12 @@
       "hash": "QmYSM6PKnCe9YVPNMisfpoBmczzHkA7h5Wrnc36DtdJhGo",
       "name": "go-libp2p-swarm",
       "version": "3.0.9"
+    },
+    {
+      "author": "whyrusleeping",
+      "hash": "QmZNkThpqfVXs9GNbexPrfBbXSLNYeKrE7jwFM2oqHbyqN",
+      "name": "go-libp2p-protocol",
+      "version": "1.0.0"
     }
   ],
   "gxVersion": "0.12.1",
