--- a/Dockerfile.faucet
+++ b/Dockerfile.faucet
@@ -2,7 +2,7 @@ FROM golang:1.11.1-stretch
 MAINTAINER Filecoin Dev Team
 
 RUN apt-get update && apt-get install -y ca-certificates file sudo clang
-RUN curl -sSf https://static.rust-lang.org/rustup.sh | sh -
+RUN curl https://sh.rustup.rs -sSf | sh -s -- -y
 
 # This docker file is a modified version of
 # https://github.com/ipfs/go-ipfs/blob/master/Dockerfile
