--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,8 +68,9 @@ commands:
           no_output_timeout: 30m
           command: |
             trap "go run github.com/jstemmer/go-junit-report < test-results/go-test-suite/go-test.out > test-results/go-test-suite/go-test-report.xml" EXIT
-            TESTS=$(go list ./... | circleci tests split --split-by=timings)
-            FILECOIN_RUN_SECTOR_BUILDER_TESTS=<< parameters.sector_builder_tests >> go test -timeout 30m -functional=<< parameters.functional >> -integration=<< parameters.integration >> -unit=<< parameters.unit >> -parallel 2 -v ${TESTS} 2>&1 | tee test-results/go-test-suite/go-test.out
+            export TEST_PACKAGES="$(go list ./... | circleci tests split)"
+            export TEST_PARALLELISM="4"
+            FILECOIN_RUN_SECTOR_BUILDER_TESTS=<< parameters.sector_builder_tests >> go run ./build/* test -functional=<< parameters.functional >> -integration=<< parameters.integration >> -unit=<< parameters.unit >> -v 2>&1 | tee test-results/go-test-suite/go-test.out
   git_fetch_all_tags:
     steps:
       - run:
